fixed ingredient and recipe button alignment

--- a/src/app/home-page.component.css
+++ b/src/app/home-page.component.css
@@ -55,6 +55,7 @@
 section {
     max-width: 100%;
     overflow-x: hidden;
+    color: #585858
 }
 
 li {
